--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Kindly"
         tools:targetApi="31">
         <activity
+            android:name=".CharityManageAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".AddCharity"
+            android:exported="false" />
+        <activity
             android:name=".AdminHomeActivity"
             android:exported="false" />
         <activity
