--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Kindly"
         tools:targetApi="31">
         <activity
+            android:name=".PostManageAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".AddPost"
+            android:exported="false" />
+        <activity
+            android:name=".CharityReqPage"
+            android:exported="false" />
+        <activity
             android:name=".CharityManageAdmin"
             android:exported="false" />
         <activity
