--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.kindly">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+
 
     <application
         android:allowBackup="true"
@@ -12,20 +19,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kindly"
         tools:targetApi="31">
+
         <activity
-
             android:name=".UpdateCharity"
-
             android:exported="false" />
-       <activity
-          android:name=".PostManageAdmin"
+        <activity
+            android:name=".PostManageAdmin"
             android:exported="false" />
         <activity
             android:name=".AddPost"
             android:exported="false" />
         <activity
             android:name=".CharityReqPage"
-                  android:exported="false" />
+            android:exported="false" />
         <activity
             android:name=".CharityManageAdmin"
             android:exported="false" />
@@ -43,7 +49,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -51,5 +56,4 @@
             android:name=".MainActivity"
             android:exported="true" />
     </application>
-
 </manifest>
