--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:windowSoftInputMode="adjustResize"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
